<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ViewResultFragment">

    <TextView
        android:id="@+id/tvResultadoView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/cs_secundaria"
        android:contentDescription="@string/txt_desc_view_deck_report"
        android:text="@string/txt_titulo"
        android:textAlignment="center"
        android:textColor="@color/texto_verde_esc"
        android:textSize="35sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider5"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHome" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRanking"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider5"
        tools:listitem="@layout/view_result_layout" />

    <Button
        android:id="@+id/btnHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="?android:attr/colorFocusedHighlight"
        android:contentDescription="@string/menu_home"
        android:text="@string/btn_home"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textColorLink="@android:color/transparent"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultadoView" />
</androidx.constraintlayout.widget.ConstraintLayout>