<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nav_show"
    tools:context=".ui.ShowFragment">


    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:contentDescription="@string/txt_recorte_logo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/txtAtencao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:srcCompat="@drawable/olympus" />

    <TextView
        android:id="@+id/txtAtencao"
        android:layout_width="400dp"
        android:layout_height="170dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="monospace"
        android:text="@string/txt_atencao"
        android:textAlignment="center"
        android:textColor="@color/txt_title"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/ivCartasEscolhidas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <ImageView
        android:id="@+id/ivCartasEscolhidas"
        android:layout_width="305dp"
        android:layout_height="404dp"
        android:layout_marginBottom="116dp"
        android:contentDescription="@string/txt_desc_cards"
        android:src="@drawable/four_color_deck"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAtencao" />

    <Button
        android:id="@+id/btnAvancar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="?android:attr/colorFocusedHighlight"
        android:text="@string/btn_next"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textColorLink="@android:color/transparent"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>