<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llLogonhm"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="center"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clLogoll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/flLogollcl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivLogollclfl"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:contentDescription="@string/txt_recorte_logo"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/olympus" />
        </FrameLayout>

        <ImageView
            android:id="@+id/ivLogonhm"
            android:layout_width="107dp"
            android:layout_height="107dp"
            android:layout_marginStart="66dp"
            android:layout_marginTop="17dp"
            android:contentDescription="@string/nav_header_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/olympus" />

        <TextView
            android:id="@+id/tvTitulonhm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:fontFamily="sans-serif-smallcaps"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintBottom_toTopOf="@+id/tvEmailnhm"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvEmailnhm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="cursive"
            android:text="@string/nav_header_subtitle"
            android:textAlignment="viewStart"
            android:textColor="@color/button_background"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>